root/resources/docker-reg/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-registry
  namespace: docker-reg
spec:
  type: NodePort
  selector:
    app: docker-registry
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 32000  # You can specify a port in the range 30000-32767
